2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Tag internal documentation.

	* apps/graph-morpho/morpho.hh,
	* mln/accu/internal/couple.hh,
	* mln/core/box_runend_piter.hh,
	* mln/core/box_runstart_piter.hh,
	* mln/core/concept/delta_point_site.hh,
	* mln/core/concept/dpoint.hh,
	* mln/core/concept/function.hh,
	* mln/core/concept/gdpoint.hh,
	* mln/core/concept/meta_accumulator.hh,
	* mln/core/concept/neighborhood.hh,
	* mln/core/concept/pseudo_site.hh,
	* mln/core/concept/site.hh,
	* mln/core/concept/site_proxy.hh,
	* mln/core/concept/site_set.hh,
	* mln/core/dpoints_pixter.hh,
	* mln/core/dpsites_piter.hh,
	* mln/core/image/ch_piter.hh,
	* mln/core/image/complex_image.hh,
	* mln/core/image/complex_neighborhood_piter.hh,
	* mln/core/image/complex_window_piter.hh,
	* mln/core/image/dmorph/extended.hh,
	* mln/core/image/dmorph/extension_fun.hh,
	* mln/core/image/dmorph/extension_ima.hh,
	* mln/core/image/dmorph/extension_val.hh,
	* mln/core/image/dmorph/hexa.hh,
	* mln/core/image/dmorph/hexa_piter.hh,
	* mln/core/image/dmorph/image2d_h.hh,
	* mln/core/image/dmorph/image_if.hh,
	* mln/core/image/dmorph/p2p_image.hh,
	* mln/core/image/dmorph/slice_image.hh,
	* mln/core/image/dmorph/sub_image.hh,
	* mln/core/image/dmorph/sub_image_if.hh,
	* mln/core/image/dmorph/transformed_image.hh,
	* mln/core/image/dmorph/unproject_image.hh,
	* mln/core/image/edge_image.hh,
	* mln/core/image/flat_image.hh,
	* mln/core/image/graph_window_if_piter.hh,
	* mln/core/image/graph_window_piter.hh,
	* mln/core/image/image1d.hh,
	* mln/core/image/image2d.hh,
	* mln/core/image/image3d.hh,
	* mln/core/image/imorph/decorated_image.hh,
	* mln/core/image/imorph/interpolated.hh,
	* mln/core/image/imorph/labeled_image.hh,
	* mln/core/image/imorph/lazy_image.hh,
	* mln/core/image/imorph/plain.hh,
	* mln/core/image/imorph/safe.hh,
	* mln/core/image/imorph/tr_image.hh,
	* mln/core/image/vertex_image.hh,
	* mln/core/image/vmorph/cast_image.hh,
	* mln/core/image/vmorph/fun_image.hh,